Se da estilo a seccion dato

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       </section>
       <div class="dato">
         <h3>Dato del dia</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia unde fugit suscipit quas beatae ad maxime a, doloribus ex ipsa placeat sunt qui tempora sint ut architecto vel optio sapiente.</p>
+        <img src="./multimedia/imagenes/dato.PNG" alt="">
+        <p>"Una alta humedad es clave para garantizar el éxito en la germinación"</p>
       </div>
     </section>
     <footer>
