Se agrego info en la seccion podios

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h2>Caracteristicas principales</h2>
           <ul>
             <li>Marihuana Medicinal</li>
-            <li>Floración rápida</li>
+            <li>Floración rápida (45-55 días)</li>
             <li>Efecto suave</li>
             <li>Fácil de cultivar</li>
             <li>Ideal para extracción de resina</li>
