--- a/html/tienda.html
+++ b/html/tienda.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img src="https://via.placeholder.com/150" alt="LOGO" />
+      <img src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
       <nav>
         <ul class="menu">
           <li><a href="../index.html">Inicio</a></li>
@@ -61,7 +61,7 @@
       </article>
     </section>
     <footer>
-      <img src="https://via.placeholder.com/100" alt="LOGO" />
+      <img src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <a href="./tienda.html">Ir arriba</a>
