Agrego links de los grows del podio

--- a/html/guias.html
+++ b/html/guias.html
@@ -102,7 +102,7 @@
       </section>
       </div>
       <footer>
-        <img src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
+        <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
         <div>
           <p>Sitio desarrollado por Carolina Gómez</p>
           <a href="./guias.html">Ir arriba</a>
