--- a/html/tienda.html
+++ b/html/tienda.html
@@ -61,7 +61,7 @@
       </article>
     </section>
     <footer>
-      <img src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
+      <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <a href="./tienda.html">Ir arriba</a>
