--- a/html/cannabisMedicinal.html
+++ b/html/cannabisMedicinal.html
@@ -82,7 +82,7 @@
       </div>
     </section>
     <footer>
-      <img src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
+      <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <a href="./cannabisMedicinal.html">Ir arriba</a>
