--- a/html/contacto.html
+++ b/html/contacto.html
@@ -58,7 +58,7 @@
       </article>
     </section>
     <footer>
-      <img src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
+      <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <a href="./contacto.html">Ir arriba</a>
