Agrego animaciones a titulos

--- a/html/cannabisMedicinal.html
+++ b/html/cannabisMedicinal.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img src="https://via.placeholder.com/150" alt="LOGO" />
+      <img src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
       <nav>
         <ul class="menu">
           <li><a href="../index.html">Inicio</a></li>
@@ -82,7 +82,7 @@
       </div>
     </section>
     <footer>
-      <img src="https://via.placeholder.com/100" alt="LOGO" />
+      <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <a href="./cannabisMedicinal.html">Ir arriba</a>
