--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -29,7 +34,7 @@
     </section>
     <section class="seccionCentral">
       <section class="primerSeccion">
-        <h1>Variedad del mes</h1>
+        <h1 class="animate__animated animate__heartBeat">Variedad del mes</h1>
         <article class="primerSeccion__articulo">
           <img src="./imagenes/jamaican.PNG" alt="planta de cannabis" />
           <p>
@@ -56,7 +61,7 @@
         </article>
       </section>
       <section class="segundaSeccion">
-        <h2>¡Podio de growshops amigues!</h2>
+        <h2 class="animate__animated animate__zoomInUp">¡Podio de growshops amigues!</h2>
         <div class="podio__puestos">
           <article class="podio__puestos.Uno">
             <img
@@ -88,7 +93,7 @@
         <article><a href="#">Aceite de cannabis: Preparación</a></article>
       </section>
       <div class="dato">
-        <h3>Dato del dia</h3>
+        <h3 class="animate__animated animate__shakeX">Dato del dia</h3>
         <img src="./multimedia/imagenes/dato.PNG" alt="">
         <p>"Una alta humedad es clave para garantizar el éxito en la germinación"</p>
       </div>
