--- a/html/guias.html
+++ b/html/guias.html
@@ -5,24 +5,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
-      <img src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
-      <nav>
-        <ul class="menu">
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="./guias.html">Guias de cultivo</a></li>
-          <li>
-            <a href="./cannabisMedicinal.html">Cannabis Medicinal</a>
-          </li>
-          <li><a href="./tienda.html">Tienda</a></li>
-          <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-light menu">
+        <div class="container-fluid">
+          <img src="../multimedia/imagenes/LOGO.jpg" alt="logo" />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="opcionesMenu">
+              <li class="nav-item">
+                <a class="active" aria-current="page" href="../index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="./guias.html">Guias de cultivo</a>
+              </li>
+              <li class="nav-item">
+                <a href="./cannabisMedicinal.html">Cannabis Medicinal</a>
+              </li>
+              <li class="nav-item">
+                <a href="./tienda.html">Tienda</a>
+              </li>
+              <li class="nav-item">
+                <a href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
-    <section >
+    <section>
       <article class="instructivo">
         <div class="instructivo__manual">
           <h1>Manual para el cultivador</h1>
@@ -49,7 +84,6 @@
             exercitationem nulla unde nobis, sunt incidunt aliquid!
           </p>
           <button>Leer más</button>
-
         </article>
       </section>
       <section id="indoor">
@@ -61,7 +95,6 @@
             cupiditate esse similique ratione suscipit?
           </p>
           <button>Leer más</button>
-
         </article>
       </section>
       <section id="exterior">
@@ -69,11 +102,10 @@
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae
             quas ipsum eum consectetur saepe optio, et vel? Libero blanditiis
-            consequatur quidem dolores voluptatum aspernatur expedita, quia sequi
-            sapiente natus porro.
+            consequatur quidem dolores voluptatum aspernatur expedita, quia
+            sequi sapiente natus porro.
           </p>
           <button>Leer más</button>
-
         </article>
       </section>
       <section id="plagas">
@@ -85,60 +117,63 @@
             sapiente!
           </p>
           <button>Leer más</button>
-
         </article>
       </section>
       <section id="tips">
         <article>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod animi
-            maxime omnis asperiores quibusdam, aliquid placeat iusto facilis alias
-            maiores nobis voluptas impedit, ea repudiandae in minus suscipit!
-            Obcaecati, accusantium.
+            maxime omnis asperiores quibusdam, aliquid placeat iusto facilis
+            alias maiores nobis voluptas impedit, ea repudiandae in minus
+            suscipit! Obcaecati, accusantium.
           </p>
           <button>Leer más</button>
-
         </article>
       </section>
+    </div>
+    <footer>
+      <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
+      <div>
+        <p>Sitio desarrollado por Carolina Gómez</p>
+        <a href="./guias.html">Ir arriba</a>
       </div>
-      <footer>
-        <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
-        <div>
-          <p>Sitio desarrollado por Carolina Gómez</p>
-          <a href="./guias.html">Ir arriba</a>
-        </div>
-        <div class="footer__redes">
-          <ul>
-            <h3>Seguinos en</h3>
-            <li>
-              <a href="#">
-                <img
-                  src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
-                  alt="instagram"
-                />Instagram
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img
-                  src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
-                  alt="instagram"
-                />
-                Facebook</a
-              >
-            </li>
-            <li>
-              <a href="#">
-                <img
-                  src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
-                  alt="instagram"
-                />
-  
-                Twitter</a
-              >
-            </li>
-          </ul>
-        </div>
-      </footer>
-      </body>
-      </html>
+      <div class="footer__redes">
+        <ul>
+          <h3>Seguinos en</h3>
+          <li>
+            <a href="#">
+              <img
+                src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
+                alt="instagram"
+              />Instagram
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
+                alt="instagram"
+              />
+              Facebook</a
+            >
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
+                alt="instagram"
+              />
+
+              Twitter</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
