--- a/html/tienda.html
+++ b/html/tienda.html
@@ -5,35 +5,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
-      <img src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
-      <nav>
-        <ul class="menu">
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="./guias.html">Guias de cultivo</a></li>
-          <li>
-            <a href="./cannabisMedicinal.html">Cannabis Medicinal</a>
-          </li>
-          <li><a href="./tienda.html">Tienda</a></li>
-          <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-light menu">
+        <div class="container-fluid">
+          <img src="../multimedia/imagenes/LOGO.jpg" alt="logo" />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="opcionesMenu">
+              <li class="nav-item">
+                <a class="active" aria-current="page" href="../index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="./guias.html">Guias de cultivo</a>
+              </li>
+              <li class="nav-item">
+                <a href="./cannabisMedicinal.html">Cannabis Medicinal</a>
+              </li>
+              <li class="nav-item">
+                <a href="./tienda.html">Tienda</a>
+              </li>
+              <li class="nav-item">
+                <a href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
     <section class="productos">
       <article>
         <h2>Carpas de cultivo</h2>
         <img
-        src="../multimedia/imagenes/D_NQ_NP_931997-MLA44180456984_112020-O.jpg"
-        alt="carpa80*80"
+          src="../multimedia/imagenes/D_NQ_NP_931997-MLA44180456984_112020-O.jpg"
+          alt="carpa80*80"
         />
         <button>Entrar</button>
       </article>
       <article>
         <h2>Luminaria</h2>
-        <img  src="../multimedia/imagenes/DSC_0118.jpg" alt="led" />
+        <img src="../multimedia/imagenes/DSC_0118.jpg" alt="led" />
         <button>Entrar</button>
       </article>
       <article>
@@ -43,9 +78,9 @@
       </article>
       <article>
         <h2>Fertilizantes</h2>
-        <img 
-        src="../multimedia/imagenes/fertilizantes.PNG"
-        alt="fertilizantes"
+        <img
+          src="../multimedia/imagenes/fertilizantes.PNG"
+          alt="fertilizantes"
         />
         <button>Entrar</button>
       </article>
@@ -99,5 +134,10 @@
         </ul>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
