--- a/index.html
+++ b/index.html
@@ -6,31 +6,103 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-    
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
-      <img src="./multimedia/imagenes/LOGO.jpg" alt="LOGO" />
-      <nav>
-        <ul class="menu">
-          <li><a href="./index.html">Inicio</a></li>
-          <li><a href="./html/guias.html">Guias de cultivo</a></li>
-          <li>
-            <a href="./html/cannabisMedicinal.html">Cannabis Medicinal</a>
-          </li>
-          <li><a href="./html/tienda.html">Tienda</a></li>
-          <li><a href="./html/contacto.html">Contacto</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-light menu">
+        <div class="container-fluid">
+          <img src="./multimedia/imagenes/LOGO.jpg" alt="logo" />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="opcionesMenu">
+              <li class="nav-item">
+                <a class="active" aria-current="page" href="./index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="./html/guias.html">Guias de cultivo</a>
+              </li>
+              <li class="nav-item">
+                <a href="./html/cannabisMedicinal.html">Cannabis Medicinal</a>
+              </li>
+              <li class="nav-item">
+                <a href="./html/tienda.html">Tienda</a>
+              </li>
+              <li class="nav-item">
+                <a href="./html/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
     <section>
-      <article class="carrousel">
-        <img src="./imagenes/carrousel.PNG" alt="imagenCannabisMedicinal" />
-      </article>
+      <div class="container-fluid carrousel">
+        <div class="row">
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./imagenes/carrousel.PNG" class="d-block" alt="..." />
+              </div>
+              <div class="carousel-item">
+                <img src="./imagenes/carru2.PNG" class="d-block" alt="..." />
+              </div>
+              <div class="carousel-item">
+                <img src="./imagenes/carru3.PNG" class="d-block" alt="..." />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="seccionCentral">
       <section class="primerSeccion">
@@ -61,7 +133,9 @@
         </article>
       </section>
       <section class="segundaSeccion">
-        <h2 class="animate__animated animate__zoomInUp">¡Podio de growshops amigues!</h2>
+        <h2 class="animate__animated animate__zoomInUp">
+          ¡Podio de growshops amigues!
+        </h2>
         <div class="podio__puestos">
           <article class="podio__puestos.Uno">
             <img
@@ -94,8 +168,10 @@
       </section>
       <div class="dato">
         <h3 class="animate__animated animate__shakeX">Dato del dia</h3>
-        <img src="./multimedia/imagenes/dato.PNG" alt="">
-        <p>"Una alta humedad es clave para garantizar el éxito en la germinación"</p>
+        <img src="./multimedia/imagenes/dato.PNG" alt="" />
+        <p>
+          "Una alta humedad es clave para garantizar el éxito en la germinación"
+        </p>
       </div>
     </section>
     <footer>
@@ -137,5 +213,10 @@
         </ul>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
