--- a/html/guias.html
+++ b/html/guias.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
@@ -41,64 +42,64 @@
     </section>
     <div class="secciones">
       <section id="espacioCultivo">
-        <article>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Necessitatibus enim natus distinctio temporibus facilis harum
-            voluptatem obcaecati ut error sit deserunt nesciunt adipisci
-            exercitationem nulla unde nobis, sunt incidunt aliquid!
-          </p>
-          <button>Leer más</button>
-
-        </article>
+        <div class="card">
+          <h5 class="card-header titulo h2">Espacio cultivo</h5>
+          <div class="card-body opcionManual">
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Necessitatibus enim natus distinctio temporibus facilis harum
+              voluptatem obcaecati ut error sit deserunt nesciunt adipisci
+              exercitationem nulla unde nobis, sunt incidunt aliquid!</p>
+            <a href="#" type="button" class="btn btn-success">Leer más</a>
+          </div>
+        </div>
       </section>
       <section id="indoor">
-        <article>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non vel
-            repudiandae unde delectus neque optio sapiente iusto? Distinctio
-            dolorum voluptatum incidunt debitis, consectetur fuga reprehenderit
-            cupiditate esse similique ratione suscipit?
-          </p>
-          <button>Leer más</button>
-
-        </article>
+        <div class="card">
+          <h5 class="card-header titulo h2">Cultivo en indoor</h5>
+          <div class="card-body opcionManual">
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Necessitatibus enim natus distinctio temporibus facilis harum
+              voluptatem obcaecati ut error sit deserunt nesciunt adipisci
+              exercitationem nulla unde nobis, sunt incidunt aliquid!</p>
+            <a href="#" type="button" class="btn btn-success">Leer más</a>
+          </div>
+        </div>
       </section>
       <section id="exterior">
-        <article>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae
-            quas ipsum eum consectetur saepe optio, et vel? Libero blanditiis
-            consequatur quidem dolores voluptatum aspernatur expedita, quia sequi
-            sapiente natus porro.
-          </p>
-          <button>Leer más</button>
-
-        </article>
+        <div class="card">
+          <h5 class="card-header titulo h2">Cultivo en exterior</h5>
+          <div class="card-body opcionManual">
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Necessitatibus enim natus distinctio temporibus facilis harum
+              voluptatem obcaecati ut error sit deserunt nesciunt adipisci
+              exercitationem nulla unde nobis, sunt incidunt aliquid!</p>
+            <a href="#" type="button" class="btn btn-success">Leer más</a>
+          </div>
+        </div>
       </section>
       <section id="plagas">
-        <article>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto
-            praesentium maiores officia quibusdam eum, cum porro officiis earum
-            sunt eveniet hic quam enim dolorum odio dolore repudiandae itaque ut
-            sapiente!
-          </p>
-          <button>Leer más</button>
-
-        </article>
+        <div class="card">
+          <h5 class="card-header titulo h2">Plagas mas comunes</h5>
+          <div class="card-body opcionManual">
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Necessitatibus enim natus distinctio temporibus facilis harum
+              voluptatem obcaecati ut error sit deserunt nesciunt adipisci
+              exercitationem nulla unde nobis, sunt incidunt aliquid!</p>
+            <a href="#" type="button" class="btn btn-success">Leer más</a>
+          </div>
+        </div>
       </section>
       <section id="tips">
-        <article>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod animi
-            maxime omnis asperiores quibusdam, aliquid placeat iusto facilis alias
-            maiores nobis voluptas impedit, ea repudiandae in minus suscipit!
-            Obcaecati, accusantium.
-          </p>
-          <button>Leer más</button>
-
-        </article>
+        <div class="card">
+          <h5 class="card-header titulo h2">Tips para principiantes</h5>
+          <div class="card-body opcionManual">
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Necessitatibus enim natus distinctio temporibus facilis harum
+              voluptatem obcaecati ut error sit deserunt nesciunt adipisci
+              exercitationem nulla unde nobis, sunt incidunt aliquid!</p>
+            <a href="#" type="button" class="btn btn-success">Leer más</a>
+          </div>
+        </div>
       </section>
       </div>
       <footer>
@@ -140,5 +141,6 @@
           </ul>
         </div>
       </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
       </body>
       </html>
