Agrego estilos en primer seccion de cannabisMedicinal.html

--- a/html/cannabisMedicinal.html
+++ b/html/cannabisMedicinal.html
@@ -57,32 +57,33 @@
         </div>
       </nav>
     </header>
-    <section class="seccionesCbd">
-      <div>
-        <article>
-          <h2>Marihuana y CBD</h2>
+    <section class="primerseccion">
+      <a href="#">
+        <article class="primerseccion__cbd">
+          <p>Marihuana y CBD</p>
           <img
             src="../multimedia/imagenes/marihuana-medicinal.jpg"
             alt="marihuana-medicinal"
           />
         </article>
-      </div>
-      <div>
-        <article>
-          <h2>Ultimas Noticias</h2>
+      </a>
+      <a href="#">
+        <article class="primerseccion__noticias">
+          <p>Ultimas Noticias</p>
           <img
             src="../multimedia/imagenes/Argentina. la marcha mundial de la marihuana se hizo por redes.jpg"
-            alt="imagen de mapa de argentina"
+            alt=""
           />
         </article>
-      </div>
-      <div>
-        <article>
-          <h2>Tratamientos y recetas</h2>
-          <img src="../multimedia/imagenes/cannabis-89c2cf.jpg" alt="recetas" />
+      </a>
+      <a href="#">
+        <article class="primerseccion__recetas">
+          <p>Tratamientos y recetas</p>
+          <img src="../multimedia/imagenes/cannabis-89c2cf.jpg" alt="" />
         </article>
-      </div>
+      </a>
     </section>
+
     <section class="investigaciones">
       <h3>¿Cuánto sabes sobre cannabis medicinal?</h3>
       <article>
