--- a/html/contacto.html
+++ b/html/contacto.html
@@ -15,7 +15,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/estilos.css" />
   </head>
   <body>
     <header>
@@ -85,9 +85,9 @@
             <input type="checkbox" name="newsletter" value="1" />
           </div>
           <div class="contacto__formulario__botones">
-            <input type="submit" value="Enviar " />
-            <input type="reset" value="Limpiar " />
-            <input type="button" value="Guardar para después" />
+            <input type="submit" value="Enviar" />
+            <input type="reset" value="Limpiar" />
+            <input type="button" value="Guardar" />
           </div>
         </form>
       </article>
