--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/estilos.css" />
   </head>
   <body>
     <header>
@@ -135,7 +135,6 @@
             </div>
           </div>
         </div>
-
         <article class="primerSeccion__lista">
           <h2>Caracteristicas principales</h2>
           <ul>
