--- a/html/contacto.html
+++ b/html/contacto.html
@@ -58,7 +58,7 @@
       </nav>
     </header>
     <section class="contacto">
-      <h1 class="contacto__titulo">Comunicate con nosotres!</h1>
+      <h1 class="contacto__titulo animate__animated animate__zoomInDown">Comunicate con nosotres!</h1>
       <article>
         <img src="../multimedia/imagenes/imagen2.jpg" alt="" />
         <form class="contacto__formulario" method="GET">
