--- a/html/guias.html
+++ b/html/guias.html
@@ -60,7 +60,7 @@
     <section>
       <article class="instructivo">
         <div class="instructivo__manual">
-          <h1>Manual para el cultivador</h1>
+          <h1 class="animate__animated animate__fadeInLeft">Manual para el cultivador</h1>
           <img src="../imagenes/manual.jfif" alt="manual" />
         </div>
         <nav>
