--- a/html/tienda.html
+++ b/html/tienda.html
@@ -59,7 +59,7 @@
     </header>
     <section class="productos">
       <article>
-        <h2>Carpas de cultivo</h2>
+        <h2 class="animate__animated animate__shakeX">Carpas de cultivo</h2>
         <img
           src="../multimedia/imagenes/D_NQ_NP_931997-MLA44180456984_112020-O.jpg"
           alt="carpa80*80"
@@ -67,17 +67,17 @@
         <button>Entrar</button>
       </article>
       <article>
-        <h2>Luminaria</h2>
+        <h2 class="animate__animated animate__shakeX">Luminaria</h2>
         <img src="../multimedia/imagenes/DSC_0118.jpg" alt="led" />
         <button>Entrar</button>
       </article>
       <article>
-        <h2>Sustratos</h2>
+        <h2 class="animate__animated animate__shakeX">Sustratos</h2>
         <img src="../multimedia/imagenes/descarga.jpg" alt="sustarto" />
         <button>Entrar</button>
       </article>
       <article>
-        <h2>Fertilizantes</h2>
+        <h2 class="animate__animated animate__shakeX">Fertilizantes</h2>
         <img
           src="../multimedia/imagenes/fertilizantes.PNG"
           alt="fertilizantes"
@@ -85,12 +85,12 @@
         <button>Entrar</button>
       </article>
       <article>
-        <h2>Accesorios</h2>
+        <h2 class="animate__animated animate__shakeX">Accesorios</h2>
         <img src="../multimedia/imagenes/kit.PNG" alt="kit" />
         <button>Entrar</button>
       </article>
       <article>
-        <h2>Cosecha y secado</h2>
+        <h2 class="animate__animated animate__shakeX">Cosecha y secado</h2>
         <img src="../multimedia/imagenes/secado.PNG" alt="secado" />
         <button>Entrar</button>
       </article>
