--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet"   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"  rel="stylesheet"   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"/>
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/estilos.css" />
   </head>
   <body>
@@ -128,7 +129,7 @@
             </div>
           </div>
         </div>
-        <article class="primerSeccion__lista">
+        <article class="primerSeccion__lista" data-aos="flip-left">
           <h2>Caracteristicas principales</h2>
           <ul>
             <li>Marihuana Medicinal</li>
@@ -143,35 +144,35 @@
         </article>
       </section>
       <section class="segundaSeccion">
-        <h2 class="animate__animated animate__zoomInUp">
+        <h2 >
           ¡Podio de growshops amigues!
         </h2>
         <div class="card-group m-5">
-          <div class="card podio">
+          <div class="card podio" data-aos="flip-left">
             <img
               src="./multimedia/imagenes/SMG-logo-dark.png"
               alt="logoSanMari"
             />
             <a href="https://linktr.ee/sanmarigrow" class="visitar">Visitar</a>
           </div>
-          <div class="card podio">
+          <div class="card podio" data-aos="flip-up">
             <img
               src="./multimedia/imagenes/logocultivarg.png"
               alt="logocultivarg"
             />
             <a href="https://linktr.ee/sanmarigrow" class="visitar">Visitar</a>
           </div>
-          <div class="card podio">
+          <div class="card podio" data-aos="flip-right">
             <img
               src="./multimedia/imagenes/descarga.png"
               alt="logoCultibaires..."
             />
             <a href="https://linktr.ee/sanmarigrow" class="visitar">Visitar</a>
           </div>
-        </div>
+        </div> 
       </section>
       <section class="noticias">
-        <h2>Lo más buscado</h2>
+        <h2 class="animate__animated animate__zoomInUp">Lo más buscado</h2>
         <div class="accordion" id="accordionPanelsStayOpenExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -268,8 +269,8 @@
           </div>
         </div>
       </section>
-      <div class="dato ">
-        <h3 class="animate__animated animate__shakeX">Dato del dia</h3>
+      <div class="dato" data-aos="flip-up">
+        <h3 >Dato del dia</h3>
         <div class="card">
           <img
             src="./multimedia/imagenes/dato.PNG"
@@ -329,5 +330,9 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
