Se realizan cambios de estilo con sass y se mejora SEO de web

--- a/html/cannabisMedicinal.html
+++ b/html/cannabisMedicinal.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Conexión420 - Cannabis Medicinal</title>
+    <meta name="description" content="Informate con las últimas noticias sobre cannabis medicinal">
+    <meta name="keywords" content="cannabis, marihuana, CBD, variedad, leyes, formulario, tratamientos, recetas">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -80,7 +82,7 @@
       </article>
     </section>
     <section class="investigaciones">
-      <h3>¿Cuánto sabes sobre cannabis medicinal?</h3>
+      <h3 class="titulo__h2">¿Cuánto sabes sobre cannabis medicinal?</h3>
       <article>
         <img src="../multimedia/imagenes/imagen1.PNG"
           alt="aceite de cannabis" data-aos="zoom-out-up"/>
@@ -107,8 +109,8 @@
           investigación.
         </p>
       </article>
-      <div >
-        <h2>Mini documental</h2>
+      <div class="box__style--dark" >
+        <h2 class="titulo__h2">Mini documental</h2>
         <iframe class="video"
           src="https://www.youtube.com/embed/K_uSRryQt0M"
           title="YouTube video player"
