--- a/html/contacto.html
+++ b/html/contacto.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Conexión420 - Contacto</title>
+    <meta name="description" content="Dejanos tu mensaje que estamos para asesorarte">
+    <meta name="keywords" content="cannabis, marihuana, CBD, consultas">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -58,7 +60,7 @@
       </nav>
     </header>
     <section class="contacto">
-      <h1 class="contacto__titulo animate__animated animate__zoomInDown">Comunicate con nosotres!</h1>
+      <h1 class="contacto__titulo animate__animated animate__zoomInDown titulo__h1">Comunicate con nosotres!</h1>
       <article>
         <img src="../multimedia/imagenes/imagen2.jpg" alt="" />
         <form class="contacto__formulario" method="GET">
@@ -84,10 +86,10 @@
             <label for="newsletter">Quiero recibir newsletter</label>
             <input type="checkbox" name="newsletter" value="1" />
           </div>
-          <div class="contacto__formulario__botones">
-            <input type="submit" value="Enviar" />
-            <input type="reset" value="Limpiar" />
-            <input type="button" value="Guardar" />
+          <div class="contacto__formulario__botones ">
+            <input class="btn--form" type="submit" value="Enviar" />
+            <input class="btn--form"type="reset" value="Limpiar" />
+            <input class="btn--form"type="button" value="Guardar" />
           </div>
         </form>
       </article>
