--- a/html/guias.html
+++ b/html/guias.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Conexión420 - Guias de ayuda</title>
+    <meta name="description" content="Tenemos diversas guias de ayuda para iniciarte en el mundo como cultivador">
+    <meta name="keywords" content="cannabis, marihuana, indoor, exterior, plagas, cultivo, tratamientos">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -60,7 +62,7 @@
     <section>
       <article class="instructivo">
         <div class="instructivo__manual">
-          <h1 class="animate__animated animate__fadeInLeft">Manual para el cultivador</h1>
+          <h1 class="animate__animated animate__fadeInLeft titulo__h2">Manual para el cultivador</h1>
           <img src="../imagenes/manual.jfif" alt="manual" />
         </div>
         <nav>
@@ -77,7 +79,7 @@
     <div class="secciones">
       <section id="espacioCultivo">
         <div class="card">
-          <h5 class="card-header titulo h1">Espacio cultivo</h5>
+          <h5 class="card-header titulo titulo__h2">Espacio cultivo</h5>
           <div class="card-body opcionManual">
             <p class="card-text">¿Cómo cultivar marihuana? Si no sabes como auto abastecerte de tu planta favorita aquí en GB te enseñaremos a como plantar marihuana, para que no dependas del mercado negro ni tengas que comprar tu marihuana en una asociación. Plántatela tu mismo en casa con nuestros consejos y tendrás tu propia cosecha en muy pocos meses.
 
@@ -92,7 +94,7 @@
       </section>
       <section id="indoor">
         <div class="card">
-          <h5 class="card-header titulo h1">Cultivo en indoor</h5>
+          <h5 class="card-header titulo titulo__h2">Cultivo en indoor</h5>
           <div class="card-body opcionManual">
             <p class="card-text">Miles de personas alrededor de todo el mundo se preguntan cómo hacer para cultivar cannabis en sus casas. En muchos lugares, lxs pacientes de marihuana medicinal ahora tienen la opción de cultivar su propia medicina, así que pensé que sería apropiado hacer mi primera contribución a esta columna. En este artículo brindaremos únicamente información sobre cultivo de marihuana en interior, con el fin de mantener las cosas fáciles.
 
@@ -103,7 +105,7 @@
       </section>
       <section id="exterior">
         <div class="card">
-          <h5 class="card-header titulo h1">Cultivo en exterior</h5>
+          <h5 class="card-header titulo titulo__h2">Cultivo en exterior</h5>
           <div class="card-body opcionManual">
             <p class="card-text">Cuidar una planta de marihuana para conseguir un desarrollo óptimo no siempre es sencillo, y depende en gran medida a la zona de cultivo. En principio es más fácil cultivar en el jardín de tu casa que en medio de la naturaleza, lo que se conoce como "cultivo de guerrilla".</p>
             <a href="https://www.diosaplanta.com/blog/-cultivo-basico-de-marihuana-en-exterior-b35.html" type="button" class="btn btn-success">Leer más</a>
@@ -112,7 +114,7 @@
       </section>
       <section id="plagas">
         <div class="card">
-          <h5 class="card-header titulo h1">Plagas más comunes</h5>
+          <h5 class="card-header titulo titulo__h2">Plagas más comunes</h5>
           <div class="card-body opcionManual">
             <p class="card-text">A todos nos gusta tener nuestras plantas grandes y rebosantes de vida, ¿No?
 
@@ -125,7 +127,7 @@
       </section>
       <section id="tips">
         <div class="card">
-          <h5 class="card-header titulo h1">Tips para principiantes</h5>
+          <h5 class="card-header titulo titulo__h2">Tips para principiantes</h5>
           <div class="card-body opcionManual">
             <p class="card-text">Entonces, ¿por dónde empezar a cultivar cannabis? Hablemos de la planta.
 
