--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Conexión420</title>
+    <meta name="description" content="Todo lo que necesitas saber sobre cannabis lo encontras acá. Últimas noticias, guias de ayuda, tienda con productos de diferentes growshops y más">
+    <meta name="keywords" content="cannabis, marihuana, semillas, carpas, cultivo, noticias, variedad, CBD">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -102,7 +104,7 @@
       <section class="primerSeccion">
         <div class="card mb-3 primerSeccion__elegida">
           <div class="row g-0">
-            <h5 class="card-title animate__animated animate__heartBeat">
+            <h5 class="card-title animate__animated animate__heartBeat titulo__h1 ">
               Variedad del mes
             </h5>
             <div class="col-md-4">
@@ -129,8 +131,8 @@
             </div>
           </div>
         </div>
-        <article class="primerSeccion__lista" data-aos="flip-left">
-          <h2>Caracteristicas principales</h2>
+        <article class="primerSeccion__lista " data-aos="flip-left">
+          <h2 class="titulo__h3">Caracteristicas principales</h2>
           <ul>
             <li>Marihuana Medicinal</li>
             <li>Floración rápida (45-55 días)</li>
@@ -143,8 +145,8 @@
           </ul>
         </article>
       </section>
-      <section class="segundaSeccion">
-        <h2 >
+      <section class="segundaSeccion box__style">
+        <h2 class="titulo__h2">
           ¡Podio de growshops amigues!
         </h2>
         <div class="card-group m-5">
@@ -171,8 +173,8 @@
           </div>
         </div> 
       </section>
-      <section class="noticias">
-        <h2 class="animate__animated animate__zoomInUp">Lo más buscado</h2>
+      <section class="noticias box__style">
+        <h2 class="animate__animated animate__zoomInUp titulo__h1">Lo más buscado</h2>
         <div class="accordion" id="accordionPanelsStayOpenExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -270,7 +272,7 @@
         </div>
       </section>
       <div class="dato" data-aos="flip-up">
-        <h3 >Dato del dia</h3>
+        <h3 class="titulo__h2" >Dato del dia</h3>
         <div class="card">
           <img
             src="./multimedia/imagenes/dato.PNG"
