--- a/html/tienda.html
+++ b/html/tienda.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Conexión420 - Productos</title>
+    <meta name="description" content="Tenemos la tienda más completa con diversidad de gropshops amiguos">
+    <meta name="keywords" content="carpas, cultivo, luminaria, sustratos, fertilizantes">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -59,7 +61,7 @@
     </header>
     <section class="productos">
       <article>
-        <h2 class="animate__animated animate__shakeX">Carpas de cultivo</h2>
+        <h2 class="animate__animated animate__shakeX titulo__h3">Carpas de cultivo</h2>
         <img
           src="../multimedia/imagenes/D_NQ_NP_931997-MLA44180456984_112020-O.jpg"
           alt="carpa80*80"
@@ -67,17 +69,17 @@
         <button>Entrar</button>
       </article>
       <article>
-        <h2 class="animate__animated animate__shakeX">Luminaria</h2>
+        <h2 class="animate__animated animate__shakeX titulo__h3">Luminaria</h2>
         <img src="../multimedia/imagenes/DSC_0118.jpg" alt="led" />
         <button>Entrar</button>
       </article>
       <article>
-        <h2 class="animate__animated animate__shakeX">Sustratos</h2>
+        <h2 class="animate__animated animate__shakeX titulo__h3">Sustratos</h2>
         <img src="../multimedia/imagenes/descarga.jpg" alt="sustarto" />
         <button>Entrar</button>
       </article>
       <article>
-        <h2 class="animate__animated animate__shakeX">Fertilizantes</h2>
+        <h2 class="animate__animated animate__shakeX titulo__h3">Fertilizantes</h2>
         <img
           src="../multimedia/imagenes/fertilizantes.PNG"
           alt="fertilizantes"
@@ -85,12 +87,12 @@
         <button>Entrar</button>
       </article>
       <article>
-        <h2 class="animate__animated animate__shakeX">Accesorios</h2>
+        <h2 class="animate__animated animate__shakeX titulo__h3">Accesorios</h2>
         <img src="../multimedia/imagenes/kit.PNG" alt="kit" />
         <button>Entrar</button>
       </article>
       <article>
-        <h2 class="animate__animated animate__shakeX">Cosecha y secado</h2>
+        <h2 class="animate__animated animate__shakeX titulo__h3">Cosecha y secado</h2>
         <img src="../multimedia/imagenes/secado.PNG" alt="secado" />
         <button>Entrar</button>
       </article>
