Agrego favicon y doy estilos a los html

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <title>Conexión420 - Contacto</title>
-    <meta name="description" content="Dejanos tu mensaje que estamos para asesorarte">
-    <meta name="keywords" content="cannabis, marihuana, CBD, consultas">
+    <meta
+      name="description"
+      content="Dejanos tu mensaje que estamos para asesorarte"
+    />
+    <meta name="keywords" content="cannabis, marihuana, CBD, consultas" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,12 +21,81 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/estilos.css" />
+    <link
+    rel="apple-touch-icon"
+    sizes="57x57"
+    href="../favicon/apple-icon-57x57.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="60x60"
+    href="../favicon/apple-icon-60x60.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="72x72"
+    href="../favicon/apple-icon-72x72.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="76x76"
+    href="../favicon/apple-icon-76x76.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="114x114"
+    href="../favicon/apple-icon-114x114.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="120x120"
+    href="../favicon/apple-icon-120x120.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="144x144"
+    href="../favicon/apple-icon-144x144.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="152x152"
+    href="../favicon/apple-icon-152x152.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="../favicon/apple-icon-180x180.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="192x192"
+    href="../favicon/android-icon-192x192.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="../favicon/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="96x96"
+    href="../favicon/favicon-96x96.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="../favicon/favicon-16x16.png"
+  />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <img src="../multimedia/imagenes/LOGO.jpg" alt="logo" />
+          <img src="../multimedia/iconos/LOGO.jpg" alt="logo" />
           <button
             class="navbar-toggler"
             type="button"
@@ -60,9 +132,16 @@
       </nav>
     </header>
     <section class="contacto">
-      <h1 class="contacto__titulo animate__animated animate__zoomInDown titulo__h1">Comunicate con nosotres!</h1>
+      <h1
+        class="contacto__titulo animate__animated animate__zoomInDown titulo__h1"
+      >
+        Comunicate con nosotres!
+      </h1>
       <article>
-        <img src="../multimedia/imagenes/imagen2.jpg" alt="" />
+        <img
+          src="../multimedia/imagenes/imagen2.jpg"
+          alt="imagen de la planta de cannabis"
+        />
         <form class="contacto__formulario" method="GET">
           <label for="nombre">Nombre</label>
           <input type="text" name="nombre" />
@@ -86,16 +165,16 @@
             <label for="newsletter">Quiero recibir newsletter</label>
             <input type="checkbox" name="newsletter" value="1" />
           </div>
-          <div class="contacto__formulario__botones ">
+          <div class="contacto__formulario__botones">
             <input class="btn--form" type="submit" value="Enviar" />
-            <input class="btn--form"type="reset" value="Limpiar" />
-            <input class="btn--form"type="button" value="Guardar" />
+            <input class="btn--form" type="reset" value="Limpiar" />
+            <input class="btn--form" type="button" value="Guardar" />
           </div>
         </form>
       </article>
     </section>
     <footer>
-      <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
+      <img class="logo" src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <a href="./contacto.html">Ir arriba</a>
@@ -104,27 +183,27 @@
         <ul>
           <h3>Seguinos en</h3>
           <li>
-            <a href="#">
+            <a href="https://www.instagram.com/">
               <img
                 src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
-                alt="instagram"
+                alt="icono instagram"
               />Instagram
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.facebook.com/">
               <img
                 src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
-                alt="instagram"
+                alt="icono facebook"
               />
               Facebook</a
             >
           </li>
           <li>
-            <a href="#">
+            <a href="https://twitter.com/?lang=es">
               <img
                 src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
-                alt="instagram"
+                alt="icono twiter"
               />
 
               Twitter</a
