--- a/html/cannabisMedicinal.html
+++ b/html/cannabisMedicinal.html
@@ -2,8 +2,14 @@
 <html lang="en">
   <head>
     <title>Conexión420 - Cannabis Medicinal</title>
-    <meta name="description" content="Informate con las últimas noticias sobre cannabis medicinal">
-    <meta name="keywords" content="cannabis, marihuana, CBD, variedad, leyes, formulario, tratamientos, recetas">
+    <meta
+      name="description"
+      content="Informate con las últimas noticias sobre cannabis medicinal"
+    />
+    <meta
+      name="keywords"
+      content="cannabis, marihuana, CBD, variedad, leyes, formulario, tratamientos, recetas"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,12 +26,81 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <link rel="stylesheet" href="../css/estilos.css" />
+    <link
+    rel="apple-touch-icon"
+    sizes="57x57"
+    href="../favicon/apple-icon-57x57.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="60x60"
+    href="../favicon/apple-icon-60x60.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="72x72"
+    href="../favicon/apple-icon-72x72.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="76x76"
+    href="../favicon/apple-icon-76x76.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="114x114"
+    href="../favicon/apple-icon-114x114.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="120x120"
+    href="../favicon/apple-icon-120x120.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="144x144"
+    href="../favicon/apple-icon-144x144.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="152x152"
+    href="../favicon/apple-icon-152x152.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="../favicon/apple-icon-180x180.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="192x192"
+    href="../favicon/android-icon-192x192.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="../favicon/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="96x96"
+    href="../favicon/favicon-96x96.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="../favicon/favicon-16x16.png"
+  />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <img src="../multimedia/imagenes/LOGO.jpg" alt="logo" />
+          <img src="../multimedia/iconos/LOGO.jpg" alt="logo" />
           <button
             class="navbar-toggler"
             type="button"
@@ -73,19 +148,25 @@
         <p>Ultimas Noticias</p>
         <img
           src="../multimedia/imagenes/Argentina. la marcha mundial de la marihuana se hizo por redes.jpg"
-          alt=""
+          alt="imagen representando legalidad del cannabis en argentina"
         />
       </article>
       <article class="primerseccion__recetas" data-aos="flip-left">
         <p>Tratamientos y recetas</p>
-        <img src="../multimedia/imagenes/cannabis-89c2cf.jpg" alt="" />
+        <img
+          src="../multimedia/imagenes/tratamientos.PNG"
+          alt="imagen de extracion de planta de cannabis"
+        />
       </article>
     </section>
     <section class="investigaciones">
       <h3 class="titulo__h2">¿Cuánto sabes sobre cannabis medicinal?</h3>
       <article>
-        <img src="../multimedia/imagenes/imagen1.PNG"
-          alt="aceite de cannabis" data-aos="zoom-out-up"/>
+        <img
+          src="../multimedia/imagenes/aceite.jpg"
+          alt="aceite de cannabis"
+          data-aos="zoom-out-up"
+        />
         <p>
           La planta de cannabis se utilizó por miles de años en distintas
           culturas alrededor del mundo para distintos fines, entre ellos, la
@@ -109,9 +190,10 @@
           investigación.
         </p>
       </article>
-      <div class="box__style--dark" >
+      <div class="box__style--dark">
         <h2 class="titulo__h2">Mini documental</h2>
-        <iframe class="video"
+        <iframe
+          class="video"
           src="https://www.youtube.com/embed/K_uSRryQt0M"
           title="YouTube video player"
           frameborder="0"
@@ -121,7 +203,7 @@
       </div>
     </section>
     <footer>
-      <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
+      <img class="logo" src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <a href="./cannabisMedicinal.html">Ir arriba</a>
@@ -130,27 +212,27 @@
         <ul>
           <h3>Seguinos en</h3>
           <li>
-            <a href="#">
+            <a href="https://www.instagram.com/">
               <img
                 src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
-                alt="instagram"
+                alt="icono instagram"
               />Instagram
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.facebook.com/">
               <img
                 src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
-                alt="instagram"
+                alt="icono facebook"
               />
               Facebook</a
             >
           </li>
           <li>
-            <a href="#">
+            <a href="https://twitter.com/?lang=es">
               <img
                 src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
-                alt="instagram"
+                alt="icono twiter"
               />
 
               Twitter</a
