--- a/html/guias.html
+++ b/html/guias.html
@@ -18,12 +18,81 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/estilos.css" />
+    <link
+    rel="apple-touch-icon"
+    sizes="57x57"
+    href="../favicon/apple-icon-57x57.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="60x60"
+    href="../favicon/apple-icon-60x60.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="72x72"
+    href="../favicon/apple-icon-72x72.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="76x76"
+    href="../favicon/apple-icon-76x76.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="114x114"
+    href="../favicon/apple-icon-114x114.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="120x120"
+    href="../favicon/apple-icon-120x120.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="144x144"
+    href="../favicon/apple-icon-144x144.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="152x152"
+    href="../favicon/apple-icon-152x152.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="../favicon/apple-icon-180x180.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="192x192"
+    href="../favicon/android-icon-192x192.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="../favicon/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="96x96"
+    href="../favicon/favicon-96x96.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="../favicon/favicon-16x16.png"
+  />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <img src="../multimedia/imagenes/LOGO.jpg" alt="logo" />
+          <img src="../multimedia/iconos/LOGO.jpg" alt="logo" />
           <button
             class="navbar-toggler"
             type="button"
@@ -63,7 +132,7 @@
       <article class="instructivo">
         <div class="instructivo__manual">
           <h1 class="animate__animated animate__fadeInLeft titulo__h2">Manual para el cultivador</h1>
-          <img src="../imagenes/manual.jfif" alt="manual" />
+          <img src="../multimedia/imagenes/manual.jfif" alt="manual" />
         </div>
         <nav>
           <ul class="instructivo__opciones">
@@ -140,7 +209,7 @@
       </section>
       </div>
     <footer>
-      <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
+      <img class="logo" src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <a href="./guias.html">Ir arriba</a>
@@ -149,27 +218,27 @@
         <ul>
           <h3>Seguinos en</h3>
           <li>
-            <a href="#">
+            <a href="https://www.instagram.com/">
               <img
                 src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
-                alt="instagram"
+                alt="icono instagram"
               />Instagram
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.facebook.com/">
               <img
                 src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
-                alt="instagram"
+                alt="icono facebook"
               />
               Facebook</a
             >
           </li>
           <li>
-            <a href="#">
+            <a href="https://twitter.com/?lang=es">
               <img
                 src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
-                alt="instagram"
+                alt="icono twiter"
               />
 
               Twitter</a
