--- a/html/tienda.html
+++ b/html/tienda.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Conexión420 - Productos</title>
-    <meta name="description" content="Tenemos la tienda más completa con diversidad de gropshops amiguos">
+    <meta name="description" content="Tenemos la tienda más completa con diversidad de gropshops amigos">
     <meta name="keywords" content="carpas, cultivo, luminaria, sustratos, fertilizantes">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,12 +18,81 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/estilos.css" />
+    <link
+    rel="apple-touch-icon"
+    sizes="57x57"
+    href="../favicon/apple-icon-57x57.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="60x60"
+    href="../favicon/apple-icon-60x60.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="72x72"
+    href="../favicon/apple-icon-72x72.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="76x76"
+    href="../favicon/apple-icon-76x76.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="114x114"
+    href="../favicon/apple-icon-114x114.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="120x120"
+    href="../favicon/apple-icon-120x120.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="144x144"
+    href="../favicon/apple-icon-144x144.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="152x152"
+    href="../favicon/apple-icon-152x152.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="../favicon/apple-icon-180x180.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="192x192"
+    href="../favicon/android-icon-192x192.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="../favicon/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="96x96"
+    href="../favicon/favicon-96x96.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="../favicon/favicon-16x16.png"
+  />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <img src="../multimedia/imagenes/LOGO.jpg" alt="logo" />
+          <img src="../multimedia/iconos/LOGO.jpg" alt="logo" />
           <button
             class="navbar-toggler"
             type="button"
@@ -98,7 +167,7 @@
       </article>
     </section>
     <footer>
-      <img class="logo" src="../multimedia/imagenes/LOGO.jpg" alt="LOGO" />
+      <img class="logo" src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <a href="./tienda.html">Ir arriba</a>
@@ -107,27 +176,27 @@
         <ul>
           <h3>Seguinos en</h3>
           <li>
-            <a href="#">
+            <a href="https://www.instagram.com/">
               <img
                 src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
-                alt="instagram"
+                alt="icono instagram"
               />Instagram
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.facebook.com/">
               <img
                 src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
-                alt="instagram"
+                alt="icono facebook"
               />
               Facebook</a
             >
           </li>
           <li>
-            <a href="#">
+            <a href="https://twitter.com/?lang=es">
               <img
                 src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
-                alt="instagram"
+                alt="icono twiter"
               />
 
               Twitter</a
