--- a/index.html
+++ b/index.html
@@ -2,22 +2,105 @@
 <html lang="en">
   <head>
     <title>Conexión420</title>
-    <meta name="description" content="Todo lo que necesitas saber sobre cannabis lo encontras acá. Últimas noticias, guias de ayuda, tienda con productos de diferentes growshops y más">
-    <meta name="keywords" content="cannabis, marihuana, semillas, carpas, cultivo, noticias, variedad, CBD">
+    <meta
+      name="description"
+      content="Todo lo que necesitas saber sobre cannabis lo encontras acá. Últimas noticias, guias de ayuda, tienda con productos de diferentes growshops y más"
+    />
+    <meta
+      name="keywords"
+      content="cannabis, marihuana, semillas, carpas, cultivo, noticias, variedad, CBD"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet"   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"  rel="stylesheet"   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"/>
-      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/estilos.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <img src="./multimedia/imagenes/LOGO.jpg" alt="logo" />
+          <img src="./multimedia/iconos/LOGO.jpg" alt="logo" />
           <button
             class="navbar-toggler"
             type="button"
@@ -63,13 +146,25 @@
           >
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./imagenes/carrousel.PNG" class="d-block" alt="..." />
+                <img
+                  src="./multimedia/imagenes/carrousel.PNG"
+                  class="d-block"
+                  alt="Detalle del nro de resolucion"
+                />
               </div>
               <div class="carousel-item">
-                <img src="./imagenes/carru2.PNG" class="d-block" alt="..." />
+                <img
+                  src="./multimedia/imagenes/carru2.PNG"
+                  class="d-block"
+                  alt="Pasos a seguir para certificado "
+                />
               </div>
               <div class="carousel-item">
-                <img src="./imagenes/carru3.PNG" class="d-block" alt="..." />
+                <img
+                  src="./multimedia/imagenes/carru3.PNG"
+                  class="d-block"
+                  alt="Detalle de ley"
+                />
               </div>
             </div>
             <button
@@ -104,12 +199,14 @@
       <section class="primerSeccion">
         <div class="card mb-3 primerSeccion__elegida">
           <div class="row g-0">
-            <h5 class="card-title animate__animated animate__heartBeat titulo__h1 ">
+            <h5
+              class="card-title animate__animated animate__heartBeat titulo__h1"
+            >
               Variedad del mes
             </h5>
             <div class="col-md-4">
               <img
-                src="./imagenes/jamaican.PNG"
+                src="./multimedia/imagenes/jamaican.PNG"
                 class="img-fluid rounded-start"
                 alt="planta de cannabis"
               />
@@ -131,7 +228,7 @@
             </div>
           </div>
         </div>
-        <article class="primerSeccion__lista " data-aos="flip-left">
+        <article class="primerSeccion__lista" data-aos="flip-left">
           <h2 class="titulo__h3">Caracteristicas principales</h2>
           <ul>
             <li>Marihuana Medicinal</li>
@@ -146,35 +243,35 @@
         </article>
       </section>
       <section class="segundaSeccion box__style">
-        <h2 class="titulo__h2">
-          ¡Podio de growshops amigues!
-        </h2>
+        <h2 class="titulo__h2">¡Podio de growshops amigues!</h2>
         <div class="card-group m-5">
           <div class="card podio" data-aos="flip-left">
             <img
               src="./multimedia/imagenes/SMG-logo-dark.png"
-              alt="logoSanMari"
+              alt="logo de SanMari"
             />
             <a href="https://linktr.ee/sanmarigrow" class="visitar">Visitar</a>
           </div>
           <div class="card podio" data-aos="flip-up">
             <img
               src="./multimedia/imagenes/logocultivarg.png"
-              alt="logocultivarg"
+              alt="logo de cultivarg"
             />
             <a href="https://linktr.ee/sanmarigrow" class="visitar">Visitar</a>
           </div>
           <div class="card podio" data-aos="flip-right">
             <img
               src="./multimedia/imagenes/descarga.png"
-              alt="logoCultibaires..."
+              alt="logo de Cultibaires..."
             />
             <a href="https://linktr.ee/sanmarigrow" class="visitar">Visitar</a>
           </div>
-        </div> 
+        </div>
       </section>
       <section class="noticias box__style">
-        <h2 class="animate__animated animate__zoomInUp titulo__h1">Lo más buscado</h2>
+        <h2 class="animate__animated animate__zoomInUp titulo__h1">
+          Lo más buscado
+        </h2>
         <div class="accordion" id="accordionPanelsStayOpenExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -217,7 +314,10 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#panelsStayOpen-collapseTwo"
                 aria-expanded="false"
-                aria-controls="panelsStayOpen-collapseTwo">Cultivo exterior</button>
+                aria-controls="panelsStayOpen-collapseTwo"
+              >
+                Cultivo exterior
+              </button>
             </h2>
             <div
               id="panelsStayOpen-collapseTwo"
@@ -272,7 +372,7 @@
         </div>
       </section>
       <div class="dato" data-aos="flip-up">
-        <h3 class="titulo__h2" >Dato del dia</h3>
+        <h3 class="titulo__h2">Dato del dia</h3>
         <div class="card">
           <img
             src="./multimedia/imagenes/dato.PNG"
@@ -289,7 +389,7 @@
       </div>
     </section>
     <footer>
-      <img class="logo" src="./multimedia/imagenes/LOGO.jpg" alt="LOGO" />
+      <img class="logo" src="./multimedia/iconos/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <a href="./index.html">Ir arriba</a>
@@ -298,27 +398,27 @@
         <ul>
           <h3>Seguinos en</h3>
           <li>
-            <a href="#">
+            <a href="https://www.instagram.com/">
               <img
                 src="./multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
-                alt="instagram"
+                alt="icono instagram"
               />Instagram
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.facebook.com/">
               <img
                 src="./multimedia/iconos/facebook_icon-icons.com_53612.svg"
-                alt="instagram"
+                alt="icono facebook"
               />
               Facebook</a
             >
           </li>
           <li>
-            <a href="#">
+            <a href="https://twitter.com/?lang=es">
               <img
                 src="./multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
-                alt="instagram"
+                alt="icono twiter"
               />
 
               Twitter</a
