sigo dando estilos y agrego cards de bootstrap

--- a/html/cannabisMedicinal.html
+++ b/html/cannabisMedicinal.html
@@ -136,32 +136,32 @@
         </div>
       </nav>
     </header>
-    <section class="primerseccion">
-      <article class="primerseccion__cbd" data-aos="flip-left">
-        <p>Marihuana y CBD</p>
+    <div class="card-group seccionUno">
+      <div class="card seccionUno__opciones" data-aos="flip-left">
+        <h5>Marihuana y CBD</h5>
         <img
           src="../multimedia/imagenes/marihuana-medicinal.jpg"
           alt="marihuana-medicinal"
         />
-      </article>
-      <article class="primerseccion__noticias" data-aos="flip-left">
-        <p>Ultimas Noticias</p>
+      </div>
+      <div class="card seccionUno__opciones" data-aos="flip-left">
+        <h5>Últimas Noticias</h5>
         <img
           src="../multimedia/imagenes/Argentina. la marcha mundial de la marihuana se hizo por redes.jpg"
           alt="imagen representando legalidad del cannabis en argentina"
         />
-      </article>
-      <article class="primerseccion__recetas" data-aos="flip-left">
-        <p>Tratamientos y recetas</p>
+      </div>
+      <div class="card seccionUno__opciones tres" data-aos="flip-left">
+        <h5>Tratamientos y recetas</h5>
         <img
           src="../multimedia/imagenes/tratamientos.PNG"
           alt="imagen de extracion de planta de cannabis"
         />
-      </article>
-    </section>
+      </div>
+    </div>
     <section class="investigaciones">
       <h3 class="titulo__h2">¿Cuánto sabes sobre cannabis medicinal?</h3>
-      <article>
+      <article class="investigaciones__aceite">
         <img
           src="../multimedia/imagenes/aceite.jpg"
           alt="aceite de cannabis"
@@ -190,17 +190,18 @@
           investigación.
         </p>
       </article>
-      <div class="box__style--dark">
+      <section class="investigaciones__documental box__style--dark">
         <h2 class="titulo__h2">Mini documental</h2>
-        <iframe
-          class="video"
-          src="https://www.youtube.com/embed/K_uSRryQt0M"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-      </div>
+        <iframe 
+        src="https://www.youtube.com/embed/K_uSRryQt0M"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+
+      </section>
+     
     </section>
     <footer>
       <img class="logo" src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
